going to move Orderdetails component to main deliver page. For now fixed the css to avoid overlap

--- a/client/src/components/orders/Deliver/OrderRows/OrderDetails.css
+++ b/client/src/components/orders/Deliver/OrderRows/OrderDetails.css
@@ -1,6 +1,6 @@
 .OrderDetails {
   position: fixed;
-  z-index: 110;
+  z-index: 105;
   background-color: white;
   width: 100%;
   border: 1px solid #ccc;
